[package]
name = "MonteCarloEngine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "monte_carlo_engine"
crate-type = ["cdylib"]

[dependencies]
rand = "0.9.0"
rayon = "1.10.0"
strum = "0.27.1"
strum_macros = "0.27.1"

[dependencies.pyo3]
version = "0.23.3"
features = ["abi3-py311", "extension-module"]
